footer covering content fix

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -25,7 +25,7 @@
 }
 
 .App .AppFooter.expanded ~ div {
-  padding-bottom: 12rem;
+  padding-bottom: 15rem;
 }
 
 .App .AppFooter.expanded {
